syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sigurdthor.bookshelf.grpc";
option java_outer_classname = "BookProto";

package book;

service BookService {
    rpc addBook (AddBookRequest) returns (AddBookResponse) {}
}

message AddBookRequest {
    string name = 1;
}

message AddBookResponse {
    string id = 1;
    string name = 2;
}
